--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
-{ "name": "socksv5",
-  "version": "0.0.6",
-  "author": "Brian White <mscdex@mscdex.net>",
+{
+  "name": "@payclearly/socksv5",
+  "version": "1.0.0",
   "description": "SOCKS protocol version 5 server and client implementations for node.js",
-  "main": "./index",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "dependencies": {
+    "ipv6": "^3.1.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "node test/test.js"
   },
-  "dependencies": {
-    "ipv6": "*"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PayClearly/socksv5.git"
   },
-  "bundledDependencies": [
-    "ipv6"
-  ],
-  "engines": { "node": ">=0.10.0" },
-  "keywords": [ "socks", "socks5", "socksv5", "proxy" ],
-  "licenses": [ { "type": "MIT", "url": "http://github.com/mscdex/socksv5/raw/master/LICENSE" } ],
-  "repository" : { "type": "git", "url": "http://github.com/mscdex/socksv5.git" }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PayClearly/socksv5/issues"
+  },
+  "homepage": "https://github.com/PayClearly/socksv5#readme"
 }
